--- a/subdomains/ryan/styles/Home.module.css
+++ b/subdomains/ryan/styles/Home.module.css
@@ -1,3 +1,7 @@
+.main {
+  padding: 0 1rem;
+}
+
 .main table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -36,9 +40,11 @@
 }
 
 .subline {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  gap: 0.6em;
+  gap: 0.4em 0.6em;
 }
 
 .main ul ul {
@@ -46,22 +52,16 @@
 }
 
 .activity {
-  float: left;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  gap: 0.25em 0.75em;
   width: 100%;
-  margin-right: 1em;
-  padding-right: 1em;
-  margin-bottom: 0.5em;
-}
-
-.main span {
-  font-weight: normal;
-  font-size: 0.8em;
-  text-transform: none;
-  float: right;
-  margin-right: 1em;
+  margin-bottom: 0.75em;
 }
 
 .main ul {
+  flex-basis: 100%;
   margin-left: 0.5em;
   margin-right: 0.5em;
   padding-left: 0.5em;
@@ -69,30 +69,32 @@
 
 .main li {
   margin-bottom: 0.2em;
-  clear: both;
 }
 
 .title {
-  width: 75%;
-  float: left;
+  flex: 1 1 60%;
+  min-width: 0;
 }
 
 .date {
-  float: right;
+  flex: 0 0 auto;
+  margin-left: auto;
+  white-space: nowrap;
 }
 
 .title h3 {
   display: inline;
   padding-right: 0.25em;
+  word-break: break-word;
 }
 
 .title h6 {
   font-weight: normal;
   display: inline;
+  white-space: nowrap;
 }
 
 .subline span {
-  margin: 0;
   font-size: inherit;
 }
 
@@ -111,11 +113,23 @@
   font-size: 1.1em;
 }
 
-@media screen and (min-width: 300px) and (max-width: 768px) {
+@media screen and (max-width: 600px) {
+  .main {
+    font-size: 14px;
+  }
+  .main h1 {
+    font-size: 2em;
+  }
   .title {
-    width: 50%;
+    flex-basis: 100%;
+  }
+  .date {
+    flex-basis: 100%;
+    margin-left: 0;
+    font-style: italic;
+    opacity: 0.8;
   }
   .title h6 {
-    white-space: nowrap;
+    white-space: normal;
   }
 }
